# VortexEngine

./: .gitignore  CMakeLists.txt  README.md  main.c
src/common/: camera.c  math_3d.c  projection.c  util.c  world_transform.c
src/include/: camera.h  math_3d.h  projection.h  util.h  world_transform.h
